fix: full hover text not visible

--- a/css/component.css
+++ b/css/component.css
@@ -188,6 +188,7 @@
 	-webkit-transform: translate3d(0,0,0);
 	-moz-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
+	white-space: nowrap;
 }
 
 .cl-effect-5 a:hover span,
